OSSEC configuration & IPTables

--- a/monitoring/wazuh-manager/config/ossec.conf
+++ b/monitoring/wazuh-manager/config/ossec.conf
@@ -93,6 +93,11 @@
     <url port="443">https://people.canonical.com/~ubuntu-security/oval/com.ubuntu.xenial.cve.oval.xml</url>
     <update_interval>1h</update_interval>
     </feed>
+    <feed name="ubuntu-14">
+    <disabled>no</disabled>
+    <url port="443">https://people.canonical.com/~ubuntu-security/oval/com.ubuntu.xenial.cve.oval.xml</url>
+    <update_interval>1h</update_interval>
+    </feed>
     <feed name="redhat-7">
     <disabled>no</disabled>
     <url port="443">https://www.redhat.com/security/data/oval/Red_Hat_Enterprise_Linux_7.xml</url>
