--- a/shine-frontend/ossec.conf
+++ b/shine-frontend/ossec.conf
@@ -55,10 +55,10 @@
     <interval>1d</interval>
     <scan-on-start>yes</scan-on-start>
 
-    <content type="xccdf" path="ssg-ubuntu-1604-ds.xml">
+    <content type="xccdf" path="ssg-debian-8-ds.xml">
       <profile>xccdf_org.ssgproject.content_profile_common</profile>
     </content>
-    <content type="oval" path="cve-ubuntu-xenial-oval.xml"/>
+    <content type="oval" path="cve-debian-9-oval.xml"/>
   </wodle>
 
   <wodle name="cis-cat">
