fix beats cliet

--- a/monitoring/packetbeat.client/build
+++ b/monitoring/packetbeat.client/build
@@ -1,1 +1,1 @@
-docker build --network beats --ulimit nofile=65535:65535 --ulimit memlock=-1:-1 -t mypacketbeat .
+docker build --ulimit nofile=65535:65535 --ulimit memlock=-1:-1 -t mypacketbeat .
